# pflexnetr

./: .gitignore  DESCRIPTION  NAMESPACE
R/: extendr-wrappers.R
src/: .gitignore  Makevars  Makevars.win  entrypoint.c  pflexnetr-win.def
src/rust/: Cargo.toml
src/rust/src/: cv.rs  lib.rs  linalg.rs  regularise.rs
src/rust/tests/: test.r
tests/: testthat.R
